[gd_scene load_steps=11 format=2]

[ext_resource path="res://popUp.gd" type="Script" id=1]
[ext_resource path="res://resources/texgyreadventor-regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/submuit.png" type="Texture" id=3]
[ext_resource path="res://resources/b23.png" type="Texture" id=4]
[ext_resource path="res://resources/b222222.png" type="Texture" id=5]
[ext_resource path="res://resources/b13.png" type="Texture" id=6]
[ext_resource path="res://resources/b12.png" type="Texture" id=7]
[ext_resource path="res://resources/b11.png" type="Texture" id=8]
[ext_resource path="res://resources/rawwe.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 2 )

[node name="popUp" type="Node2D"]
position = Vector2( 137.948, 155.786 )
script = ExtResource( 1 )

[node name="rawwe" type="Sprite" parent="."]
position = Vector2( 194.667, 174.429 )
scale = Vector2( 1.00725, 1.07121 )
texture = ExtResource( 9 )

[node name="submit" type="TextureButton" parent="."]
margin_left = 117.67
margin_top = 95.1762
margin_right = 238.67
margin_bottom = 121.176
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dataHeader" type="LineEdit" parent="."]
margin_left = 18.1913
margin_top = 18.0
margin_right = 219.191
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "Enter Your Task"
max_length = 30
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dataDate" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 55.0
margin_right = 220.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Enter the Time or date "
max_length = 49
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="."]
margin_left = -1.0
margin_top = 94.9155
margin_right = 119.0
margin_bottom = 120.915
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="submit" to="." method="submitPressed"]
[connection signal="mouse_entered" from="dataHeader" to="." method="mouseEntered"]
[connection signal="mouse_entered" from="dataDate" to="." method="mouseEnteredDate"]
[connection signal="pressed" from="exit" to="." method="exitOut"]
